# AutoTest-GenerativeAI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
docker/: docker-compose.yml  prometheus.yml
docker/grafana/provisioning/datasources/: datasources.yml
docs/: LEARNING_GUIDELINE.md  SETUP_GRAFANA_AND_ALLURE.md
k6/: agest_load.js  agest_multi_page.js  agest_smoke.js  agest_user_journey.js
requirements/: sample.txt
scripts/: k6_grafana.bat  k6_grafana.sh  k6_local.bat  k6_local.sh
src/: __init__.py
src/clients/: __init__.py  agest_client.py
src/models/: __init__.py  requirement.py
src/pages/: __init__.py  about_page.py  base.py  case_studies_page.py  contact_page.py  home_page.py  services_page.py
src/parsers/: __init__.py  requirement_parser.py
temp/: test result.md
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_agest_health.py
tests/ui/: __init__.py  test_home_smoke.py  test_pages_navigation.py  test_services_navigation.py
tests/unit/: __init__.py  test_requirement_parser.py
