[project]
name = "autotest-agest"
version = "0.1.0"
description = "AI-driven test automation for agest.vn - Python + pytest + Playwright"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "smoke: quick smoke tests",
    "regression: full regression suite",
    "api: API tests",
    "ui: UI / Playwright tests",
    "ai_generated: AI-generated test assets",
]

[tool.ruff]
line-length = 100
target-version = "py311"
